# web_scrapping_amazon

./: products.csv  pyproject.toml
app/: web_scrapping.py  whatsapp.py
