[tool.poetry]
name = "whatsapp-with-selenium"
version = "0.1.0"
description = ""
authors = ["Vinicius José <vinijosenog@hotmail.com>"]
readme = "README.md"
packages = [{include = "whatsapp_with_selenium"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
